# materials

models/mol_moe/: FILES_TO_UPLOAD.md  GOOGLE_COLAB_DEPLOYMENT.md  REFACTORING_SUMMARY.md
models/mol_moe/experts/: __init__.py
models/mol_moe/experts/selfies_ted/: __init__.py  load.py
models/mol_moe/experts/smi_ted_light/: __init__.py  load.py
models/mol_moe/moe/: __init__.py  models.py  moe.py
models/mol_moe/notebooks/: MoE_Caco2_Permeability.ipynb  MoE_Production_Template.ipynb  README_RUNPOD.md  VERSION_NOTES.md  pyproject.toml  setup_runpod.sh
models/mol_moe/scripts/: README.md  inference.py  install_deps.sh  pyproject.toml  train.py
models/mol_moe/utils/: device.py
