[project]
name = "moe-caco2-training"
version = "0.1.0"
description = "MoE model training for Caco-2 permeability prediction"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "torch-geometric>=2.3.1",
    "torch-scatter",
    "matplotlib==3.9.2",
    "numpy>=1.26.1,<2.0.0",
    "pandas>=1.5.3",
    "scikit-learn>=1.5.0",
    "rdkit>=2024.3.5",
    "datasets>=2.13.1",
    "huggingface-hub",
    "transformers>=4.38",
    "selfies>=2.1.0",
    "tqdm>=4.66.4",
    "xgboost==2.0.0",
    "seaborn",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.2.0+cu118.html"
]
