[project]
name = "mol-moe"
version = "1.0.0"
description = "MoL-MoE: Mixture of Experts for molecular property prediction"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",
    "torch-geometric>=2.3.1",
    "torch-scatter",
    "matplotlib==3.9.2",
    "numpy==1.26.4",          # Pinned to avoid numpy 2.x breaking changes
    "pandas>=1.5.3",
    "scikit-learn>=1.5.0",
    "rdkit>=2024.3.5",
    "datasets>=2.13.1",
    "huggingface-hub",
    "transformers==4.44.2",   # Pinned for BART model compatibility
    "selfies>=2.1.0",
    "tqdm>=4.66.4",
    "xgboost==2.1.3",         # Compatible with numpy 1.26.x
    "seaborn",
]

[project.scripts]
mol-moe-train = "train:main"
mol-moe-inference = "inference:main"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.2.0+cu118.html"
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
